<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitle"
        android:textColor="#80000000"
        android:layout_marginTop="18dp"
        android:text="@string/service" />

    <EditText
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customEntry"
        android:maxLines="1" android:singleLine="true"
        style="@style/DialogEditText"
        android:layout_marginTop="4dp"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitle"
        android:textColor="#80000000"
        android:layout_marginTop="18dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customEntry"
        android:maxLines="1" android:singleLine="true"
        style="@style/DialogEditText"
        android:layout_marginTop="4dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitle"
        android:textColor="#80000000"
        android:layout_marginTop="18dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:maxLines="1" android:singleLine="true"
        android:imeOptions="actionUnspecified"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customEntry"
        style="@style/DialogEditText"
        android:layout_marginTop="4dp"
        android:textColor="#000000" />

</LinearLayout>