<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_container"
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/lock_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_lock_red" />

                <TextView
                    android:id="@+id/service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/lock_icon"
                    android:layout_toRightOf="@+id/lock_icon"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/edit_button"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_action_edit" />

            </RelativeLayout>

            <TextView
                android:id="@+id/username_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:height="56dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="3">

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:gravity="center_vertical"
            android:hapticFeedbackEnabled="true"
            android:text="@string/deleted"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_undo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/undo"
            android:textColor="@color/warning" />

    </LinearLayout>

</FrameLayout>